# got-infra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh
include/: base_trade_adapter.hpp  binance_md_process.hpp  binance_trade_adapter.hpp  double_to_ascii.hpp  file_writer.hpp  gzstream.hpp  heartbeat_service.hpp  kraken_md_process.hpp  monitor.hpp  new_monitor.hpp  raw_file.hpp  risk_server.hpp  statistics.hpp  strat_calculator.hpp  tardis_processor.hpp  wsock.hpp  wsock2.hpp  wsock_ftx.hpp
scripts/: generate_binary.py  get_sbc_data.py  pancakeABI  process_captured_data.py  process_monitor.py  refdata.py  s3_uploader.py  tardis_downloader.py
scripts/bsc_data/: get_bsc_data.py  pyth_client.py
scripts/modules/: binance_tools.py  ftx_tools.py  kraken_tools.py  refdata_tools.py
scripts/pancake_publish/: aeron_writer.cpp  aeron_writer.hpp  test_publish.py  tmp_abi.py  writer.py
src/: CMakeLists.txt  aeron_writer.cpp  aeron_writer.hpp  base_trade_adapter.cpp  bin_to_influx_loader.cpp  binance_md_process.cpp  binance_trade_adapter.cpp  binfile_merger.cpp  binfile_reader.cpp  convert_md_binance.cpp  convert_md_tardis.cpp  file_writer.cpp  kraken_md_process.cpp  md_client.cpp  monitor.cpp  msg_sender.cpp  new_monitor.cpp  orderbook_tester.cpp  raw_file.cpp  risk_server.cpp  send_oe_msg.cpp  statistics.cpp  strat_calculator.cpp  svc_md_binance.cpp  svc_md_kraken.cpp  svc_mon_prometheus.cpp  svc_monitor.cpp  svc_oe_binance.cpp  svc_risk.cpp  svc_sig_generator.cpp  tardis_processor.cpp  test_ftx.cpp  wsock.cpp  wsock2.cpp  wsock_ftx.cpp
